<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.abort.facultycollege.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.abort.facultycollege.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.abort.facultycollege.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.abort.facultycollege.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/nav_notes"
        android:name="com.abort.facultycollege.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/note_fragment" />
    <fragment
        android:id="@+id/nav_timetable"
        android:name="com.abort.facultycollege.ui.timetable.TimeTableFragment"
        android:label="@string/title_Time"
        tools:layout="@layout/time_table_fragment"/>
    <fragment
        android:id="@+id/nav_studentdetails"
        android:name="com.abort.facultycollege.ui.studentdetails.StudentDetailsFragment"
        android:label="@string/title_Student"
        tools:layout="@layout/student_details_fragment"/>
</navigation>